--- a/hdcevents/public/asset/css/styles.css
+++ b/hdcevents/public/asset/css/styles.css
@@ -207,6 +207,17 @@ header {
   width: 25%;
 }
 
+.dashboard-events-container form {
+  display: inline-block;
+}
+
+/* Edit page */
+
+.img-preview {
+  width: 100px;
+  margin-top: 20px;
+}
+
 /* footer */
 footer {
   text-align: center;
